# ca_qtwidgets_app

./: .gitignore  CMakeLists.txt  README.md  db.json
src/: CMakeLists.txt  main.cpp
src/entities/: Device1.cpp  Device1.hpp
src/entities/misc/: Device.hpp  Nameable.hpp  Propertisable.hpp  Property.hpp  Status.hpp  Statusable.hpp
src/usecases/: GetDeviceStatus.hpp
tests/: CMakeLists.txt  device.cpp  property.cpp
